# zerminal

./: .gitignore  Cargo.toml  NOTICE  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: release-zerminal.yml  test-install.yml
.zerminal/: 03-zed-architecture.md  07-risks-and-decisions.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: emacs.json  jetbrains.json
assets/keymaps/macos/: emacs.json  jetbrains.json
assets/settings/: default.json  default_semantic_token_rules.json  initial_debug_tasks.json  initial_local_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_tasks.json  initial_user_settings.json
assets/themes/quinniverse-noir/: quinniverse-noir.json
assets/themes/type-shii/: type-shii.json
crates/active_terminal_cwd/: Cargo.toml
crates/active_terminal_cwd/src/: active_terminal_cwd.rs
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/src/: tool_permissions.rs
crates/agent_ui/src/: agent_configuration.rs  agent_panel.rs  conversation_view.rs  entry_view_state.rs  message_editor.rs
crates/ai_onboarding/src/: ai_onboarding.rs
crates/ai_terminal_panel/: Cargo.toml
crates/ai_terminal_panel/src/: agent_detection.rs  ai_terminal_panel.rs
crates/audio/src/: audio.rs
crates/auto_update/src/: auto_update.rs
crates/auto_update_helper/src/: dialog.rs  updater.rs
crates/auto_update_ui/: Cargo.toml
crates/auto_update_ui/src/: auto_update_ui.rs
crates/claude_code_ide/: Cargo.toml
crates/claude_code_ide/src/: attachment.rs  broadcaster.rs  claude_code_ide.rs  lockfile.rs  mcp.rs  server.rs
crates/cli/src/: cli.rs  main.rs
crates/client/src/: client.rs  zed_urls.rs
crates/cloud_api_types/src/: extension.rs
crates/coding_tools/: Cargo.toml
crates/coding_tools/src/: coding_tools.rs
crates/collab/: Cargo.toml
crates/context_panel/: Cargo.toml
crates/context_panel/src/: context_panel.rs
crates/context_server/src/: oauth.rs
crates/copilot_cli_ide/: Cargo.toml
crates/copilot_cli_ide/examples/: recording_shim.rs
crates/copilot_cli_ide/src/: attachment.rs  broadcaster.rs  copilot_cli_ide.rs  lockfile.rs  mcp.rs  router.rs  transport.rs
crates/copilot_cli_ide/src/transport/: content_negotiation.rs  reader.rs  server.rs  session.rs  writer.rs
crates/debugger_ui/src/: debugger_panel.rs
crates/diagnostics/src/: diagnostics.rs
crates/edit_prediction_ui/src/: rate_prediction_modal.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  code_context_menus.rs  display_map.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  hover_popover.rs  items.rs  mouse_context_menu.rs  persistence.rs  runnables.rs  split.rs
crates/editor_benchmarks/src/: main.rs
crates/editor_capabilities/: Cargo.toml
crates/editor_capabilities/src/: agent_diff_pane.rs  claude_diff_pane.rs  editor_capabilities.rs
crates/eval_cli/: Cargo.toml
crates/eval_cli/src/: headless.rs
crates/explorer_command_injector/src/: explorer_command_injector.rs
crates/extension/: Cargo.toml
crates/extension/src/: extension.rs  extension_builder.rs  extension_manifest.rs
crates/extension_cli/src/: main.rs
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: capability_granter.rs  extension_host.rs  extension_store_test.rs  wasm_host.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/feedback/src/: feedback.rs
crates/file_finder/src/: file_finder.rs
crates/fs/src/: fs.rs  repo_discovery.rs
crates/git/src/: git.rs  status.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: commit_modal.rs  commit_view.rs  conflict_view.rs  git_panel.rs  git_ui.rs  project_diff.rs
crates/gpui/src/: app.rs  executor.rs  platform.rs  text_system.rs  window.rs
crates/gpui_macos/: build.rs
crates/gpui_macos/src/: platform.rs
crates/gpui_wgpu/src/: wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/icons/src/: icons.rs
crates/image_viewer/src/: image_viewer.rs
crates/inspector_ui/src/: div_inspector.rs
crates/json_schema_store/: Cargo.toml
crates/json_schema_store/src/: json_schema_store.rs
crates/keymap_editor/src/: keymap_editor.rs
crates/language/src/: buffer.rs  language.rs  language_settings.rs
crates/language_tools/src/: key_context_view.rs  lsp_log_view.rs
crates/languages/src/: eslint.rs  go.rs  json.rs  python.rs  rust.rs  typescript.rs  vtsls.rs
crates/markdown/src/: markdown.rs  mermaid.rs
crates/markdown_editor/: Cargo.toml
crates/markdown_editor/src/: markdown_editor.rs
crates/migrator/src/: migrator.rs
crates/multi_buffer/src/: anchor.rs  multi_buffer.rs  multi_buffer_tests.rs  path_key.rs
crates/node_runtime/src/: node_runtime.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: basics_page.rs  multibuffer_hint.rs  onboarding.rs
crates/open_path_prompt/src/: open_path_prompt.rs
crates/paths/src/: paths.rs
crates/picker/src/: picker.rs
crates/platform_title_bar/src/: platform_title_bar.rs
crates/project/: Cargo.toml
crates/project/src/: git_store.rs  lsp_store.rs  project.rs  project_settings.rs  search.rs  (+2 more)
crates/project_panel/: Cargo.toml
crates/recent_directories/: Cargo.toml
crates/recent_directories/src/: recent_directories.rs
crates/recent_projects/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/vim/: Cargo.toml
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
docs/: .rules  README.md
docs/.doc-examples/: configuration.md
docs/docs/: 01-vision.md  02-brosh-v1-audit.md  04-ui-changes.md  05-crate-surgery.md  06-implementation-phases.md
docs/src/: SUMMARY.md  configuring-languages.md  configuring-zed.md  debugger.md  remote-development.md  tasks.md  worktree-trust.md
packaging/: PKGBUILD.template  nfpm.yaml  zerminal-rpm-signing-key.asc  zerminal-signing-key.asc
packaging/scripts/: postinstall.sh
script/: bundle-linux  bundle-mac  bundle-windows.ps1  install.sh
(+148 files in other folders)
