[package]
name = "active_terminal_cwd"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/active_terminal_cwd.rs"

[dependencies]
anyhow.workspace = true
db.workspace = true
gpui.workspace = true
gpui_util.workspace = true
log.workspace = true
project.workspace = true
terminal.workspace = true
terminal_view.workspace = true
workspace.workspace = true
