[package]
name = "ai_terminal_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ai_terminal_panel.rs"

[dependencies]
active_terminal_cwd.workspace = true
anyhow.workspace = true
claude_code_ide.workspace = true
coding_tools.workspace = true
collections.workspace = true
db.workspace = true
dirs.workspace = true
editor_capabilities.workspace = true
gpui.workspace = true
icons.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
