[package]
name = "context_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/context_panel.rs"

[dependencies]
active_terminal_cwd.workspace = true
anyhow.workspace = true
coding_tools.workspace = true
dirs.workspace = true
gpui.workspace = true
ignore.workspace = true
settings.workspace = true
ui.workspace = true
workspace.workspace = true
worktree.workspace = true
