[package]
name = "copilot_cli_ide"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/copilot_cli_ide.rs"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
