[package]
name = "copilot_cli_ide"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/copilot_cli_ide.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
dirs.workspace = true
editor_capabilities.workspace = true
futures.workspace = true
gpui.workspace = true
http.workspace = true
httparse.workspace = true
libc.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tempfile.workspace = true
url.workspace = true
uuid.workspace = true

[[example]]
name = "recording_shim"
path = "examples/recording_shim.rs"
