[package]
name = "editor_capabilities"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/editor_capabilities.rs"

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
multi_buffer.workspace = true
parking_lot.workspace = true
project.workspace = true
text.workspace = true
workspace.workspace = true
