[package]
name = "markdown_editor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/markdown_editor.rs"

[dependencies]
anyhow.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
markdown.workspace = true
multi_buffer.workspace = true
project.workspace = true
pulldown-cmark.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
